force-app/main/default/objects/Gest_o_de_precat_rio__c/Gest_o_de_precat_rio__c.object-meta.xml
<CustomObject>
    <label>Gestão de precatório</label>
    <nameField>
        <displayFormat>P {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestão de precatórios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>