force-app/main/default/objects/Gest_o_de_precat_rio__c/fields/Numero_do_Titulo__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Titulo__c</fullName>
    <label>Número do Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>