force-app/main/default/objects/Gest_o_de_precat_rio__c/fields/Razao_Social__c.field-meta.xml
<CustomField>
    <fullName>Razao_Social__c</fullName>
    <label>Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>