force-app/main/default/objects/Gest_o_de_precat_rio__c/listViews/Finalizados.listView-meta.xml
<ListView>
    <fullName>Finalizados</fullName>
    <columns>NAME</columns>
    <columns>Razao_Social__c</columns>
    <columns>Numero_do_Titulo__c</columns>
    <columns>Valor__c</columns>
    <columns>Data_de_vencimento__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </filters>
    <label>Finalizados</label>
</ListView>